FIx #1366 Prism editor bottom scrollbar issue Fix #1068 Move gizmo in normal space sometimes not aligned correctly FIx #1232 Gizmo does not stay aligned on normal transform space Fix issue with spliting quads into tris Fix #1240 AutoUV drifting on mesh models

--- a/css/prism.css
+++ b/css/prism.css
@@ -37,7 +37,6 @@ pre[class*="language-"] {
 pre[class*="language-"] {
 	padding: 1em;
 	margin: .5em 0;
-	overflow: auto;
 	border-radius: 0.3em;
 }
 
